// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`props.aliases is truthy 1`] = `
<div
  className="flex-100 layout-row layout-wrap layout-align-start-center"
>
  <div
    className="flex-gt-sm-40 flex-100 layout-row layout-wrap layout-align-start-center section_padding layout-padding"
  >
    <div
      className="flex-100 layout-row layout-align-start-stretch username_title"
    >
      <span
        className="layout-row flex-20 layout-align-center-center"
      >
        <i
          className="fa fa-user clip bigProfile"
          style="#333"
        />
      </span>
      <div
        className="layout-align-center-center layout-row flex"
      >
        <p>
          Hello, 
        </p>
        <h1
          className="flex-none cli"
        >
          John
           
          Doe
        </h1>
      </div>
    </div>
  </div>
  <div
    className="flex-100 layout-row layout-wrap layout-align-start-center section "
  >
    <div
      className="flex-100 layout-row layout-align-space-between-stretch"
    >
      <GreyBox
        content={
          <div
            className="layout-row flex-100"
          >
            <ProfileBox
              edit={[Function]}
              style="#333"
              theme={
                Object {
                  "colors": Object {
                    "primary": "#333",
                    "secondary": "#fafafa",
                  },
                }
              }
              user={
                Object {
                  "company_name": "FOO_COMPANY",
                  "currency": "EUR",
                  "email": "foo@bar.baz",
                  "first_name": "John",
                  "guest": false,
                  "last_name": "Doe",
                  "phone": "6345789",
                  "role": Object {
                    "name": "shipper",
                  },
                }
              }
            />
            <div
              className="flex-40 layout-row layout-align-center-center layout-wrap currency_box"
            >
              <div
                className="flex-75 layout-row layout-align-end-center layout-wrap"
              >
                <div
                  className="flex-100 layout-row layout-align-center-center layout-wrap currency_grey"
                >
                  <p
                    className="flex-none"
                  >
                    Currency:
                  </p>
                  <span>
                    <strong>
                      EUR
                    </strong>
                  </span>
                </div>
              </div>
              <div
                className="flex-75 layout-row layout-align-space-around-center layout-wrap"
              />
            </div>
          </div>
        }
        contentClassName="layout-row flex"
        titleAction={false}
        wrapperClassName="flex-gt-sm-66 flex-100 layout-row layout-align-start-center "
      />
      <GreyBox
        content={
          <div
            className="layout-row layout-wrap conditions_box"
          >
            <div
              className="flex-gt-sm-100 flex-50 layout-row layout-align-space-between-center"
            >
              <div
                className="flex-70 layout-row layout-align-start-center"
              >
                <p
                  className="flex-none"
                >
                  Download all data from ItsMyCargo
                </p>
              </div>
              <div
                className="flex-30 layout-row layout-align-center-center "
              >
                <Unknown
                  options={
                    Object {
                      "userId": undefined,
                    }
                  }
                  target="gdpr"
                  theme={
                    Object {
                      "colors": Object {
                        "primary": "#333",
                        "secondary": "#fafafa",
                      },
                    }
                  }
                />
              </div>
            </div>
            <div
              className="flex-gt-sm-100 flex-50 layout-row layout-align-space-between-center"
            >
              <div
                className="flex-70 layout-row layout-align-start-center"
              >
                <p
                  className="flex-none"
                >
                   Terms and Conditions
                </p>
              </div>
              <div
                className="flex-30 layout-row layout-align-center-center "
              >
                <RoundButton
                  active={true}
                  back={false}
                  disabled={false}
                  handleDisabled={null}
                  handleNext={[Function]}
                  icon=""
                  iconClass=""
                  inverse={false}
                  size="small"
                  text="Opt Out"
                  theme={
                    Object {
                      "colors": Object {
                        "primary": "#333",
                        "secondary": "#fafafa",
                      },
                    }
                  }
                />
              </div>
            </div>
            <div
              className="flex-gt-sm-100 flex-50 layout-row layout-align-space-between-center"
            >
              <div
                className="flex-70 layout-row layout-align-start-center"
              >
                <p
                  className="flex-none"
                >
                  ItsMyCargo GMBH Terms and Conditions
                </p>
              </div>
              <div
                className="flex-30 layout-row layout-align-center-center "
              >
                <RoundButton
                  active={true}
                  back={false}
                  disabled={false}
                  handleDisabled={null}
                  handleNext={[Function]}
                  icon=""
                  iconClass=""
                  inverse={false}
                  size="small"
                  text="Opt Out"
                  theme={
                    Object {
                      "colors": Object {
                        "primary": "#333",
                        "secondary": "#fafafa",
                      },
                    }
                  }
                />
              </div>
            </div>
            <div
              className="flex-gt-sm-100 flex-50 layout-row layout-align-space-between-center"
            >
              <div
                className="flex-70 layout-row layout-align-start-center"
              >
                <p
                  className="flex-none"
                >
                  ItsMyCargo's use of cookies
                </p>
              </div>
              <div
                className="flex-30 layout-row layout-align-center-center "
              >
                <RoundButton
                  active={true}
                  back={false}
                  disabled={false}
                  handleDisabled={null}
                  handleNext={[Function]}
                  icon=""
                  iconClass=""
                  inverse={false}
                  size="small"
                  text="Opt Out"
                  theme={
                    Object {
                      "colors": Object {
                        "primary": "#333",
                        "secondary": "#fafafa",
                      },
                    }
                  }
                />
              </div>
            </div>
          </div>
        }
        contentClassName="layout-column flex"
        title="GDPR - Your Data"
        titleAction={false}
        wrapperClassName="flex-gt-sm-30 flex-100 layout-row layout-align-start-start"
      />
    </div>
  </div>
  <div
    className="flex-100 layout-row layout-wrap layout-align-start-start"
  >
    <div
      className="flex-gt-sm-50 flex-100 layout-row layout-wrap layout-align-start-center section_padding card_padding_right section "
    >
      <div
        className="flex-100 layout-align-start-center greyBg"
      >
        <span>
          <b>
            Aliases
          </b>
        </span>
      </div>
      <div
        className="flex-100 layout-row layout-wrap layout-align-space-between-start"
      >
        <div
          className="pointy tile_padding flex-30 flex-md-45 flex-lg-45 "
          key="addNewAliasButton"
          onClick={[Function]}
        >
          <div
            className="location-box new-address layout-row layout-align-start-center layout-wrap"
          >
            <div
              className="layout-row layout-align-center flex-100"
            >
              <div
                className="plus-icon"
              />
            </div>
            <div
              className="layout-row layout-align-center flex-100"
            >
              <h3>
                Add Alias
              </h3>
            </div>
          </div>
        </div>
        <AdminClientTile
          client={
            Object {
              "foo": 0,
            }
          }
          deleteFn={[Function]}
          deleteable={true}
          flexClasses="flex-30 flex-md-45 flex-lg-45"
          theme={
            Object {
              "colors": Object {
                "primary": "#333",
                "secondary": "#fafafa",
              },
            }
          }
        />
        <AdminClientTile
          client={
            Object {
              "bar": 1,
            }
          }
          deleteFn={[Function]}
          deleteable={true}
          flexClasses="flex-30 flex-md-45 flex-lg-45"
          theme={
            Object {
              "colors": Object {
                "primary": "#333",
                "secondary": "#fafafa",
              },
            }
          }
        />
      </div>
    </div>
    <div
      className="flex-gt-sm-50 flex-100 layout-row layout-wrap layout-align-start-center section_padding section "
    >
      <div
        className="flex-100 layout-align-start-center greyBg"
      >
        <span>
          <b>
            Saved Locations
          </b>
        </span>
      </div>
      <UserLocations
        locations={Array []}
        makePrimary={[Function]}
        setNav={[Function]}
        theme={
          Object {
            "colors": Object {
              "primary": "#333",
              "secondary": "#fafafa",
            },
          }
        }
        user={
          Object {
            "company_name": "FOO_COMPANY",
            "currency": "EUR",
            "email": "foo@bar.baz",
            "first_name": "John",
            "guest": false,
            "last_name": "Doe",
            "phone": "6345789",
            "role": Object {
              "name": "shipper",
            },
          }
        }
        userDispatch={
          Object {
            "deleteAlias": [Function],
            "makePrimary": [Function],
            "newAlias": [Function],
          }
        }
      />
    </div>
  </div>
</div>
`;

exports[`props.user is falsy 1`] = `""`;

exports[`shallow render 1`] = `
<div
  className="flex-100 layout-row layout-wrap layout-align-start-center"
>
  <div
    className="flex-gt-sm-40 flex-100 layout-row layout-wrap layout-align-start-center section_padding layout-padding"
  >
    <div
      className="flex-100 layout-row layout-align-start-stretch username_title"
    >
      <span
        className="layout-row flex-20 layout-align-center-center"
      >
        <i
          className="fa fa-user clip bigProfile"
          style="#333"
        />
      </span>
      <div
        className="layout-align-center-center layout-row flex"
      >
        <p>
          Hello, 
        </p>
        <h1
          className="flex-none cli"
        >
          John
           
          Doe
        </h1>
      </div>
    </div>
  </div>
  <div
    className="flex-100 layout-row layout-wrap layout-align-start-center section "
  >
    <div
      className="flex-100 layout-row layout-align-space-between-stretch"
    >
      <GreyBox
        content={
          <div
            className="layout-row flex-100"
          >
            <ProfileBox
              edit={[Function]}
              style="#333"
              theme={
                Object {
                  "colors": Object {
                    "primary": "#333",
                    "secondary": "#fafafa",
                  },
                }
              }
              user={
                Object {
                  "company_name": "FOO_COMPANY",
                  "currency": "EUR",
                  "email": "foo@bar.baz",
                  "first_name": "John",
                  "guest": false,
                  "last_name": "Doe",
                  "phone": "6345789",
                  "role": Object {
                    "name": "shipper",
                  },
                }
              }
            />
            <div
              className="flex-40 layout-row layout-align-center-center layout-wrap currency_box"
            >
              <div
                className="flex-75 layout-row layout-align-end-center layout-wrap"
              >
                <div
                  className="flex-100 layout-row layout-align-center-center layout-wrap currency_grey"
                >
                  <p
                    className="flex-none"
                  >
                    Currency:
                  </p>
                  <span>
                    <strong>
                      EUR
                    </strong>
                  </span>
                </div>
              </div>
              <div
                className="flex-75 layout-row layout-align-space-around-center layout-wrap"
              />
            </div>
          </div>
        }
        contentClassName="layout-row flex"
        titleAction={false}
        wrapperClassName="flex-gt-sm-66 flex-100 layout-row layout-align-start-center "
      />
      <GreyBox
        content={
          <div
            className="layout-row layout-wrap conditions_box"
          >
            <div
              className="flex-gt-sm-100 flex-50 layout-row layout-align-space-between-center"
            >
              <div
                className="flex-70 layout-row layout-align-start-center"
              >
                <p
                  className="flex-none"
                >
                  Download all data from ItsMyCargo
                </p>
              </div>
              <div
                className="flex-30 layout-row layout-align-center-center "
              >
                <Unknown
                  options={
                    Object {
                      "userId": undefined,
                    }
                  }
                  target="gdpr"
                  theme={
                    Object {
                      "colors": Object {
                        "primary": "#333",
                        "secondary": "#fafafa",
                      },
                    }
                  }
                />
              </div>
            </div>
            <div
              className="flex-gt-sm-100 flex-50 layout-row layout-align-space-between-center"
            >
              <div
                className="flex-70 layout-row layout-align-start-center"
              >
                <p
                  className="flex-none"
                >
                   Terms and Conditions
                </p>
              </div>
              <div
                className="flex-30 layout-row layout-align-center-center "
              >
                <RoundButton
                  active={true}
                  back={false}
                  disabled={false}
                  handleDisabled={null}
                  handleNext={[Function]}
                  icon=""
                  iconClass=""
                  inverse={false}
                  size="small"
                  text="Opt Out"
                  theme={
                    Object {
                      "colors": Object {
                        "primary": "#333",
                        "secondary": "#fafafa",
                      },
                    }
                  }
                />
              </div>
            </div>
            <div
              className="flex-gt-sm-100 flex-50 layout-row layout-align-space-between-center"
            >
              <div
                className="flex-70 layout-row layout-align-start-center"
              >
                <p
                  className="flex-none"
                >
                  ItsMyCargo GMBH Terms and Conditions
                </p>
              </div>
              <div
                className="flex-30 layout-row layout-align-center-center "
              >
                <RoundButton
                  active={true}
                  back={false}
                  disabled={false}
                  handleDisabled={null}
                  handleNext={[Function]}
                  icon=""
                  iconClass=""
                  inverse={false}
                  size="small"
                  text="Opt Out"
                  theme={
                    Object {
                      "colors": Object {
                        "primary": "#333",
                        "secondary": "#fafafa",
                      },
                    }
                  }
                />
              </div>
            </div>
            <div
              className="flex-gt-sm-100 flex-50 layout-row layout-align-space-between-center"
            >
              <div
                className="flex-70 layout-row layout-align-start-center"
              >
                <p
                  className="flex-none"
                >
                  ItsMyCargo's use of cookies
                </p>
              </div>
              <div
                className="flex-30 layout-row layout-align-center-center "
              >
                <RoundButton
                  active={true}
                  back={false}
                  disabled={false}
                  handleDisabled={null}
                  handleNext={[Function]}
                  icon=""
                  iconClass=""
                  inverse={false}
                  size="small"
                  text="Opt Out"
                  theme={
                    Object {
                      "colors": Object {
                        "primary": "#333",
                        "secondary": "#fafafa",
                      },
                    }
                  }
                />
              </div>
            </div>
          </div>
        }
        contentClassName="layout-column flex"
        title="GDPR - Your Data"
        titleAction={false}
        wrapperClassName="flex-gt-sm-30 flex-100 layout-row layout-align-start-start"
      />
    </div>
  </div>
  <div
    className="flex-100 layout-row layout-wrap layout-align-start-start"
  >
    <div
      className="flex-gt-sm-50 flex-100 layout-row layout-wrap layout-align-start-center section_padding card_padding_right section "
    >
      <div
        className="flex-100 layout-align-start-center greyBg"
      >
        <span>
          <b>
            Aliases
          </b>
        </span>
      </div>
      <div
        className="flex-100 layout-row layout-wrap layout-align-space-between-start"
      >
        <div
          className="pointy tile_padding flex-30 flex-md-45 flex-lg-45 "
          key="addNewAliasButton"
          onClick={[Function]}
        >
          <div
            className="location-box new-address layout-row layout-align-start-center layout-wrap"
          >
            <div
              className="layout-row layout-align-center flex-100"
            >
              <div
                className="plus-icon"
              />
            </div>
            <div
              className="layout-row layout-align-center flex-100"
            >
              <h3>
                Add Alias
              </h3>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="flex-gt-sm-50 flex-100 layout-row layout-wrap layout-align-start-center section_padding section "
    >
      <div
        className="flex-100 layout-align-start-center greyBg"
      >
        <span>
          <b>
            Saved Locations
          </b>
        </span>
      </div>
      <UserLocations
        locations={Array []}
        makePrimary={[Function]}
        setNav={[Function]}
        theme={
          Object {
            "colors": Object {
              "primary": "#333",
              "secondary": "#fafafa",
            },
          }
        }
        user={
          Object {
            "company_name": "FOO_COMPANY",
            "currency": "EUR",
            "email": "foo@bar.baz",
            "first_name": "John",
            "guest": false,
            "last_name": "Doe",
            "phone": "6345789",
            "role": Object {
              "name": "shipper",
            },
          }
        }
        userDispatch={
          Object {
            "deleteAlias": [Function],
            "makePrimary": [Function],
            "newAlias": [Function],
          }
        }
      />
    </div>
  </div>
</div>
`;

exports[`state.editBool is true 1`] = `
<div
  className="flex-100 layout-row layout-wrap layout-align-start-center"
>
  <div
    className="flex-gt-sm-40 flex-100 layout-row layout-wrap layout-align-start-center section_padding layout-padding"
  >
    <EditNameBox
      handleChange={[Function]}
      user={Object {}}
    />
  </div>
  <div
    className="flex-100 layout-row layout-wrap layout-align-start-center section "
  >
    <div
      className="flex-100 layout-row layout-align-space-between-stretch"
    >
      <GreyBox
        content={
          <div
            className="layout-row flex-100"
          >
            <EditProfileBox
              close={[Function]}
              handleChange={[Function]}
              onSave={[Function]}
              style="#333"
              theme={
                Object {
                  "colors": Object {
                    "primary": "#333",
                    "secondary": "#fafafa",
                  },
                }
              }
              user={Object {}}
            />
            <div
              className="flex-40 layout-row layout-align-center-center layout-wrap currency_box"
            >
              <div
                className="flex-75 layout-row layout-align-end-center layout-wrap"
              >
                <div
                  className="flex-100 layout-row layout-align-center-center layout-wrap currency_grey"
                >
                  <p
                    className="flex-none"
                  >
                    Currency:
                  </p>
                  <span>
                    <strong>
                      EUR
                    </strong>
                  </span>
                </div>
              </div>
              <div
                className="flex-75 layout-row layout-align-space-around-center layout-wrap"
              />
            </div>
          </div>
        }
        contentClassName="layout-row flex"
        titleAction={false}
        wrapperClassName="flex-gt-sm-66 flex-100 layout-row layout-align-start-center "
      />
      <GreyBox
        content={
          <div
            className="layout-row layout-wrap conditions_box"
          >
            <div
              className="flex-gt-sm-100 flex-50 layout-row layout-align-space-between-center"
            >
              <div
                className="flex-70 layout-row layout-align-start-center"
              >
                <p
                  className="flex-none"
                >
                  Download all data from ItsMyCargo
                </p>
              </div>
              <div
                className="flex-30 layout-row layout-align-center-center "
              >
                <Unknown
                  options={
                    Object {
                      "userId": undefined,
                    }
                  }
                  target="gdpr"
                  theme={
                    Object {
                      "colors": Object {
                        "primary": "#333",
                        "secondary": "#fafafa",
                      },
                    }
                  }
                />
              </div>
            </div>
            <div
              className="flex-gt-sm-100 flex-50 layout-row layout-align-space-between-center"
            >
              <div
                className="flex-70 layout-row layout-align-start-center"
              >
                <p
                  className="flex-none"
                >
                   Terms and Conditions
                </p>
              </div>
              <div
                className="flex-30 layout-row layout-align-center-center "
              >
                <RoundButton
                  active={true}
                  back={false}
                  disabled={false}
                  handleDisabled={null}
                  handleNext={[Function]}
                  icon=""
                  iconClass=""
                  inverse={false}
                  size="small"
                  text="Opt Out"
                  theme={
                    Object {
                      "colors": Object {
                        "primary": "#333",
                        "secondary": "#fafafa",
                      },
                    }
                  }
                />
              </div>
            </div>
            <div
              className="flex-gt-sm-100 flex-50 layout-row layout-align-space-between-center"
            >
              <div
                className="flex-70 layout-row layout-align-start-center"
              >
                <p
                  className="flex-none"
                >
                  ItsMyCargo GMBH Terms and Conditions
                </p>
              </div>
              <div
                className="flex-30 layout-row layout-align-center-center "
              >
                <RoundButton
                  active={true}
                  back={false}
                  disabled={false}
                  handleDisabled={null}
                  handleNext={[Function]}
                  icon=""
                  iconClass=""
                  inverse={false}
                  size="small"
                  text="Opt Out"
                  theme={
                    Object {
                      "colors": Object {
                        "primary": "#333",
                        "secondary": "#fafafa",
                      },
                    }
                  }
                />
              </div>
            </div>
            <div
              className="flex-gt-sm-100 flex-50 layout-row layout-align-space-between-center"
            >
              <div
                className="flex-70 layout-row layout-align-start-center"
              >
                <p
                  className="flex-none"
                >
                  ItsMyCargo's use of cookies
                </p>
              </div>
              <div
                className="flex-30 layout-row layout-align-center-center "
              >
                <RoundButton
                  active={true}
                  back={false}
                  disabled={false}
                  handleDisabled={null}
                  handleNext={[Function]}
                  icon=""
                  iconClass=""
                  inverse={false}
                  size="small"
                  text="Opt Out"
                  theme={
                    Object {
                      "colors": Object {
                        "primary": "#333",
                        "secondary": "#fafafa",
                      },
                    }
                  }
                />
              </div>
            </div>
          </div>
        }
        contentClassName="layout-column flex"
        title="GDPR - Your Data"
        titleAction={false}
        wrapperClassName="flex-gt-sm-30 flex-100 layout-row layout-align-start-start"
      />
    </div>
  </div>
  <div
    className="flex-100 layout-row layout-wrap layout-align-start-start"
  >
    <div
      className="flex-gt-sm-50 flex-100 layout-row layout-wrap layout-align-start-center section_padding card_padding_right section "
    >
      <div
        className="flex-100 layout-align-start-center greyBg"
      >
        <span>
          <b>
            Aliases
          </b>
        </span>
      </div>
      <div
        className="flex-100 layout-row layout-wrap layout-align-space-between-start"
      >
        <div
          className="pointy tile_padding flex-30 flex-md-45 flex-lg-45 "
          key="addNewAliasButton"
          onClick={[Function]}
        >
          <div
            className="location-box new-address layout-row layout-align-start-center layout-wrap"
          >
            <div
              className="layout-row layout-align-center flex-100"
            >
              <div
                className="plus-icon"
              />
            </div>
            <div
              className="layout-row layout-align-center flex-100"
            >
              <h3>
                Add Alias
              </h3>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="flex-gt-sm-50 flex-100 layout-row layout-wrap layout-align-start-center section_padding section "
    >
      <div
        className="flex-100 layout-align-start-center greyBg"
      >
        <span>
          <b>
            Saved Locations
          </b>
        </span>
      </div>
      <UserLocations
        locations={Array []}
        makePrimary={[Function]}
        setNav={[Function]}
        theme={
          Object {
            "colors": Object {
              "primary": "#333",
              "secondary": "#fafafa",
            },
          }
        }
        user={
          Object {
            "company_name": "FOO_COMPANY",
            "currency": "EUR",
            "email": "foo@bar.baz",
            "first_name": "John",
            "guest": false,
            "last_name": "Doe",
            "phone": "6345789",
            "role": Object {
              "name": "shipper",
            },
          }
        }
        userDispatch={
          Object {
            "deleteAlias": [Function],
            "makePrimary": [Function],
            "newAlias": [Function],
          }
        }
      />
    </div>
  </div>
</div>
`;
